--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
   "devDependencies": {
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
+    "@dnd-kit/core": "^6.0.7",
+    "@dnd-kit/sortable": "^7.0.2",
+    "@dnd-kit/utilities": "^3.2.1",
+    "@types/uuid": "^9.0.0",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
     "react": "^17.0.2",
@@ -24,6 +28,7 @@
     "sass-loader": "^13.0.2",
     "ts-loader": "^9.4.1",
     "typescript": "^4.8.3",
+    "uuid": "^9.0.0",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.7.1"
