--- a/package.json
+++ b/package.json
@@ -5,12 +5,9 @@
   "dependencies": {
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
-    "babel-jest": "^29.4.1",
     "jest": "^26.6.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "^4.0.3",
-    "react-test-renderer": "^18.2.0"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "start": "webpack-dev-server --open --mode development --hot",
@@ -23,12 +20,18 @@
     "@dnd-kit/core": "^6.0.7",
     "@dnd-kit/sortable": "^7.0.2",
     "@dnd-kit/utilities": "^3.2.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.4.0",
     "@types/uuid": "^9.0.0",
+    "babel-jest": "^29.4.1",
     "babel-loader": "^8.2.3",
     "html-webpack-plugin": "^5.5.0",
+    "react-scripts": "^5.0.1",
     "sass": "^1.55.0",
     "sass-loader": "^13.0.2",
     "ts-loader": "^9.4.1",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.3",
     "uuid": "^9.0.0",
     "webpack": "^5.74.0",
